# pdf2md-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pdf2md-technical-spec.md  pyproject.toml
.claude/commands/: release.md
.github/workflows/: ci.yml  release.yml
pdf2md/: __main__.py  cli.py  converter.py  ocr.py  postprocess.py  utils.py
scripts/: build.sh
tests/: conftest.py  test_cli.py  test_converter.py  test_ocr.py  test_postprocess.py  test_utils.py
tests/fixtures/: generate_fixtures.py
