[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf2md"
dynamic = ["version"]
description = "CLI tool that converts PDF documents to well-structured Markdown"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Geoff Rich", email = "geoff.rich@gmail.com" },
]
keywords = ["pdf", "markdown", "converter", "cli", "pymupdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = [
    "pymupdf4llm>=1.27.0",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/mrgeoffrich/pdf2md-cli"
Repository = "https://github.com/mrgeoffrich/pdf2md-cli"
Issues = "https://github.com/mrgeoffrich/pdf2md-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "pyinstaller>=6.0",
]

[project.scripts]
pdf2md = "pdf2md.cli:main"

[tool.hatch.version]
path = "pdf2md/__init__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
